<package format="3">
  <name>planar_arm_kinematics</name>
  <version>0.0.0</version>
  <description>Planar arm kinematics package</description>
  <maintainer email="himalthilakanp96@gmail.com">tony</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>planar_arm_interfaces</depend>

  <!-- Service generation -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- FIXED TYPO HERE -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
